2009-02-05  Matias De la Puente  <mfpuente.ar@gmail.com>

	*  watraysimple/simpledocumentview.vala:
	*  watraysimple/simpledocumentmanager.vala:
	*  watraysimple/simpleplugin.vala:
	*  watray/watrayproject.vala:
	*  watray/watrayprojectspanel.vala:
	*  watray/watraymainwindow.vala:
	*  watray/watraydocumentspanel.vala:
	*  watray/watraydocumentspanelinterface.vala:
	*  ui/ui.xml:
	*  po/es.po:

	Added basic support for opened text files in projects panel.

2009-02-04  Matias De la Puente  <mfpuente.ar@gmail.com>

	*  watray/watrayproject.vala:

	Do not create two items with the same path.
	Improved create_item_from_{stock,pixbuf} methods
	Added item_exist method.

2009-02-04  Matias De la Puente  <mfpuente.ar@gmail.com>

	*  watraysimple/simpledocumentmanager.vala:
	*  watraysimple/Makefile.am:
	*  watraysimple/simpleplugin.vala:

	Removed Simple.ProjectManager, DocumentManager will take care of
	the opened files.

2009-02-03  Matias De la Puente  <mfpuente.ar@gmail.com>

	*  watraysimple/simpledocumentview.vala:
	*  watraysimple/simpledocumentmanager.vala:
	*  watraysimple/simpleconfiguremanager.vala:
	*  watraysimple/Makefile.am:
	*  watraysimple/simpleplugin.vala:
	*  watraysimple/simpleprojectmanager.vala:
	*  watraysimple/simpleconfiguredialog.vala:
	*  configure.ac:
	*  watray/watraypreferencemanager.vala:
	
	Added configure support for simple plugin.
	
	*  po/es.po:
	*  po/POTFILES.in:
	*  po/POTFILES.skip:

	Updated spanish translation.

2009-02-03  Matias De la Puente  <mfpuente.ar@gmail.com>

	*  watray/watraymainwindow.vala:

	Added website to the about dialog.

2009-02-03  Matias De la Puente  <mfpuente.ar@gmail.com>

	*  watray/watraymainwindow.vala:
	*  ui/ui.xml:

	Added about dialog and placeholders in ui.

2009-02-02  Matias De la Puente  <mfpuente.ar@gmail.com>

	*  watray/watrayproject.vala:
	*  watray/watrayprojectspanel.vala:

	Added menu support to project's items.

2009-02-02  Matias De la Puente  <mfpuente.ar@gmail.com>
